tests/sksl/errors/BreakOutsideLoop.dsl.glsl
### Compilation failed:

error: break statement must be inside a loop or switch

1 error
